--- a/research_and_analyst/notebook/test.ipynb
+++ b/research_and_analyst/notebook/test.ipynb
@@ -121,6 +121,104 @@
    "source": [
     "llm.invoke(\"hi\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5ea4964",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'StateGraphtateGraph' from 'langgraph.graph' (d:\\PythonCode\\automated-research-report-generation\\researchvenv\\Lib\\site-packages\\langgraph\\graph\\__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtyping_extensions\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m TypedDict\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpydantic\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m BaseModel, Field\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlanggraph\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mgraph\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m StateGraphtateGraph, START, END\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlangchain_core\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmessages\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m AIMessage, HumanMessage,SystemMessage\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlanggraph\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcheckpoint\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmemory\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m MemorySaver\n",
+      "\u001b[31mImportError\u001b[39m: cannot import name 'StateGraphtateGraph' from 'langgraph.graph' (d:\\PythonCode\\automated-research-report-generation\\researchvenv\\Lib\\site-packages\\langgraph\\graph\\__init__.py)"
+     ]
+    }
+   ],
+   "source": [
+    "from typing import List\n",
+    "from typing_extensions import TypedDict\n",
+    "from pydantic import BaseModel, Field\n",
+    "from langgraph.graph import StateGraph, START, END\n",
+    "from langchain_core.messages import AIMessage, HumanMessage,SystemMessage\n",
+    "from langgraph.checkpoint.memory import MemorySaver\n",
+    "from IPython.display import Image, display"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "35c60c41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_analyst(state):\n",
+    "    \"\"\"ArithmeticError\n",
+    "    \"\"\"\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee36d45a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def human_feedback(state):\n",
+    "    \"\"\"ArithmeticError\"\"\"\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e139f116",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def should_continue(state):\n",
+    "    \"\"\"ArithmeticError\"\"\"\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "baa7ee61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "builder=StateGraph()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67b41526",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "builder.add_node()\n",
+    "builder.add_node()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8978f2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "builder.edge(START, create_analyst)\n",
+    "builder.edge(\"create_analyst\", \"human_feedback\")\n",
+    "builder.edge(\"human_feedback\", should_continue, [\"create_analyst\", END])"
+   ]
   }
  ],
  "metadata": {
