--- a/research_and_analyst/notebook/test.ipynb
+++ b/research_and_analyst/notebook/test.ipynb
@@ -672,6 +672,71 @@
    "source": [
     "state"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "aa81446e",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'StateSnapshot' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mStateSnapshot\u001b[49m(values={\u001b[33m'\u001b[39m\u001b[33mtopic\u001b[39m\u001b[33m'\u001b[39m: \u001b[33m'\u001b[39m\u001b[33mthe benefits of adopting Langgraph as an agent framework\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mmax_analysts\u001b[39m\u001b[33m'\u001b[39m: \u001b[32m4\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mhuman_analyst_feedback\u001b[39m\u001b[33m'\u001b[39m: \u001b[33m'\u001b[39m\u001b[33madd something from the startup perspective and focus on the latest enterprise application\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33manalysts\u001b[39m\u001b[33m'\u001b[39m: [Analyst(name=\u001b[33m'\u001b[39m\u001b[33mSophia Tran\u001b[39m\u001b[33m'\u001b[39m, role=\u001b[33m'\u001b[39m\u001b[33mStartup Ecosystem Analyst\u001b[39m\u001b[33m'\u001b[39m, affiliation=\u001b[33m'\u001b[39m\u001b[33mTech Innovators Network\u001b[39m\u001b[33m'\u001b[39m, description=\u001b[33m'\u001b[39m\u001b[33mSophia focuses on the impact of adopting new technologies like Langgraph within startup environments. She is particularly interested in how Langgraph can streamline operations, reduce costs, and enhance scalability for emerging companies. Her analysis often includes case studies of startups that have successfully integrated Langgraph into their frameworks.\u001b[39m\u001b[33m'\u001b[39m), Analyst(name=\u001b[33m'\u001b[39m\u001b[33mMichael Chen\u001b[39m\u001b[33m'\u001b[39m, role=\u001b[33m'\u001b[39m\u001b[33mEnterprise Application Specialist\u001b[39m\u001b[33m'\u001b[39m, affiliation=\u001b[33m'\u001b[39m\u001b[33mGlobal Enterprise Solutions\u001b[39m\u001b[33m'\u001b[39m, description=\u001b[33m'\u001b[39m\u001b[33mMichael specializes in the latest enterprise applications and how frameworks like Langgraph can be leveraged to improve efficiency and innovation. He examines the integration of Langgraph in large-scale operations, focusing on its ability to enhance data processing and decision-making capabilities in complex enterprise environments.\u001b[39m\u001b[33m'\u001b[39m), Analyst(name=\u001b[33m'\u001b[39m\u001b[33mAisha Patel\u001b[39m\u001b[33m'\u001b[39m, role=\u001b[33m'\u001b[39m\u001b[33mAI Framework Researcher\u001b[39m\u001b[33m'\u001b[39m, affiliation=\u001b[33m'\u001b[39m\u001b[33mInstitute of Advanced AI Studies\u001b[39m\u001b[33m'\u001b[39m, description=\u001b[33m\"\u001b[39m\u001b[33mAisha\u001b[39m\u001b[33m'\u001b[39m\u001b[33ms research delves into the technical benefits of adopting Langgraph as an agent framework. She explores its architecture, flexibility, and how it compares to other frameworks in terms of performance and adaptability. Her work is aimed at understanding the underlying mechanisms that make Langgraph a preferred choice for AI developers.\u001b[39m\u001b[33m\"\u001b[39m), Analyst(name=\u001b[33m\"\u001b[39m\u001b[33mLiam O\u001b[39m\u001b[33m'\u001b[39m\u001b[33mReilly\u001b[39m\u001b[33m\"\u001b[39m, role=\u001b[33m'\u001b[39m\u001b[33mBusiness Strategy Consultant\u001b[39m\u001b[33m'\u001b[39m, affiliation=\u001b[33m'\u001b[39m\u001b[33mFutureTech Consulting\u001b[39m\u001b[33m'\u001b[39m, description=\u001b[33m'\u001b[39m\u001b[33mLiam provides insights into the strategic advantages of adopting Langgraph from a business perspective. He focuses on how Langgraph can drive competitive advantage, foster innovation, and support strategic goals. His analysis includes market trends and the potential return on investment for companies considering Langgraph.\u001b[39m\u001b[33m'\u001b[39m)]}, \u001b[38;5;28mnext\u001b[39m=(\u001b[33m'\u001b[39m\u001b[33mhuman_feedback\u001b[39m\u001b[33m'\u001b[39m,), config={\u001b[33m'\u001b[39m\u001b[33mconfigurable\u001b[39m\u001b[33m'\u001b[39m: {\u001b[33m'\u001b[39m\u001b[33mthread_id\u001b[39m\u001b[33m'\u001b[39m: \u001b[33m'\u001b[39m\u001b[33m1\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mcheckpoint_ns\u001b[39m\u001b[33m'\u001b[39m: \u001b[33m'\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mcheckpoint_id\u001b[39m\u001b[33m'\u001b[39m: \u001b[33m'\u001b[39m\u001b[33m1f0a1df1-04f5-6064-8005-d0c1ee02664c\u001b[39m\u001b[33m'\u001b[39m}}, metadata={\u001b[33m'\u001b[39m\u001b[33msource\u001b[39m\u001b[33m'\u001b[39m: \u001b[33m'\u001b[39m\u001b[33mloop\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mstep\u001b[39m\u001b[33m'\u001b[39m: \u001b[32m5\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mparents\u001b[39m\u001b[33m'\u001b[39m: {}}, created_at=\u001b[33m'\u001b[39m\u001b[33m2025-10-05T11:33:07.189770+00:00\u001b[39m\u001b[33m'\u001b[39m, parent_config={\u001b[33m'\u001b[39m\u001b[33mconfigurable\u001b[39m\u001b[33m'\u001b[39m: {\u001b[33m'\u001b[39m\u001b[33mthread_id\u001b[39m\u001b[33m'\u001b[39m: \u001b[33m'\u001b[39m\u001b[33m1\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mcheckpoint_ns\u001b[39m\u001b[33m'\u001b[39m: \u001b[33m'\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mcheckpoint_id\u001b[39m\u001b[33m'\u001b[39m: \u001b[33m'\u001b[39m\u001b[33m1f0a1df0-cf09-6eeb-8004-d34c3b72cfb8\u001b[39m\u001b[33m'\u001b[39m}}, tasks=(PregelTask(\u001b[38;5;28mid\u001b[39m=\u001b[33m'\u001b[39m\u001b[33mdb47106a-d166-d3ef-32d5-2d7ac449ca66\u001b[39m\u001b[33m'\u001b[39m, name=\u001b[33m'\u001b[39m\u001b[33mhuman_feedback\u001b[39m\u001b[33m'\u001b[39m, path=(\u001b[33m'\u001b[39m\u001b[33m__pregel_pull\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mhuman_feedback\u001b[39m\u001b[33m'\u001b[39m), error=\u001b[38;5;28;01mNone\u001b[39;00m, interrupts=(), state=\u001b[38;5;28;01mNone\u001b[39;00m, result=\u001b[38;5;28;01mNone\u001b[39;00m),), interrupts=())\n",
+      "\u001b[31mNameError\u001b[39m: name 'StateSnapshot' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "StateSnapshot(values={'topic': 'the benefits of adopting Langgraph as an agent framework', 'max_analysts': 4, 'human_analyst_feedback': 'add something from the startup perspective and focus on the latest enterprise application', 'analysts': [Analyst(name='Sophia Tran', role='Startup Ecosystem Analyst', affiliation='Tech Innovators Network', description='Sophia focuses on the impact of adopting new technologies like Langgraph within startup environments. She is particularly interested in how Langgraph can streamline operations, reduce costs, and enhance scalability for emerging companies. Her analysis often includes case studies of startups that have successfully integrated Langgraph into their frameworks.'), Analyst(name='Michael Chen', role='Enterprise Application Specialist', affiliation='Global Enterprise Solutions', description='Michael specializes in the latest enterprise applications and how frameworks like Langgraph can be leveraged to improve efficiency and innovation. He examines the integration of Langgraph in large-scale operations, focusing on its ability to enhance data processing and decision-making capabilities in complex enterprise environments.'), Analyst(name='Aisha Patel', role='AI Framework Researcher', affiliation='Institute of Advanced AI Studies', description=\"Aisha's research delves into the technical benefits of adopting Langgraph as an agent framework. She explores its architecture, flexibility, and how it compares to other frameworks in terms of performance and adaptability. Her work is aimed at understanding the underlying mechanisms that make Langgraph a preferred choice for AI developers.\"), Analyst(name=\"Liam O'Reilly\", role='Business Strategy Consultant', affiliation='FutureTech Consulting', description='Liam provides insights into the strategic advantages of adopting Langgraph from a business perspective. He focuses on how Langgraph can drive competitive advantage, foster innovation, and support strategic goals. His analysis includes market trends and the potential return on investment for companies considering Langgraph.')]}, next=('human_feedback',), config={'configurable': {'thread_id': '1', 'checkpoint_ns': '', 'checkpoint_id': '1f0a1df1-04f5-6064-8005-d0c1ee02664c'}}, metadata={'source': 'loop', 'step': 5, 'parents': {}}, created_at='2025-10-05T11:33:07.189770+00:00', parent_config={'configurable': {'thread_id': '1', 'checkpoint_ns': '', 'checkpoint_id': '1f0a1df0-cf09-6eeb-8004-d34c3b72cfb8'}}, tasks=(PregelTask(id='db47106a-d166-d3ef-32d5-2d7ac449ca66', name='human_feedback', path=('__pregel_pull', 'human_feedback'), error=None, interrupts=(), state=None, result=None),), interrupts=())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "430511c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "state.next"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55306577",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "further_feedack = None\n",
+    "graph.update_state(thread, {\"human_analyst_feedback\":further_feedack}, as_node=\"human_feedback\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e6d5a22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_state = graph.get_state(thread)\n",
+    "analysts = final_state.values.get('analysts')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f583a46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "final_state.next"
+   ]
   }
  ],
  "metadata": {
